nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: beta-shinchoku-net-tls
      hosts:
        - beta.shinchoku.net
  rules:
    - host: beta.shinchoku.net
      http:
        paths:
          - backend:
              serviceName: rails
              servicePort: 80
